@@ -1,6 +1,8 @@
 Changes file for Log::Log4perl::Layout::JSON
 
 {{$NEXT}}
+  - Add support for "format_prefix" option.  If this is set, then the prefix
+    string will be formatted using Log::Log4perl::Layout::PatternLayout. [github #4]
 
 0.53  2018-01-31
   - Fix "Odd number of hash elements" in split if the last configured field is empty
